[gd_scene load_steps=9 format=3 uid="uid://2of38ecv8u70"]

[ext_resource type="Texture2D" uid="uid://g57x32yehlxb" path="res://art/Factions/Knights/Buildings/Tower/Tower_Blue.png" id="1_02lgm"]
[ext_resource type="Script" uid="uid://bkfd3kgfelknf" path="res://scripts/tower.gd" id="1_6dv47"]
[ext_resource type="PackedScene" uid="uid://dq16uubywrowm" path="res://components/health_component.tscn" id="2_6dv47"]
[ext_resource type="Script" uid="uid://d1lpmbn2iem23" path="res://components/health_component.gd" id="3_6pmem"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ngr70"]
radius = 36.0
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kl3vk"]
radius = 635.003

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dv47"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pmem"]
bg_color = Color(0.858579, 0, 0.166135, 1)

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_6dv47")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.25, 1.25)
texture = ExtResource("1_02lgm")
offset = Vector2(0, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 36)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ngr70")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(0, -90)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Tower" type="Area2D" parent="."]

[node name="Range" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_kl3vk")

[node name="arrowManager" type="Node" parent="."]

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("2_6dv47")]
position = Vector2(2, -59)
script = ExtResource("3_6pmem")
progress_bar = NodePath("../../ProgressBar")
current_health = 100

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 90
y_sort_enabled = true
offset_left = -120.0
offset_top = -189.0
offset_right = 49.0
offset_bottom = -141.0
scale = Vector2(1.37649, 0.543279)
theme_override_styles/background = SubResource("StyleBoxFlat_6dv47")
theme_override_styles/fill = SubResource("StyleBoxFlat_6pmem")
show_percentage = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
